.gitmodules file for submodules (?)

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,9 @@
 [submodule "plugins/emqttd_auth_http"]
 	path = plugins/emqttd_auth_http
 	url = https://github.com/emqtt/emqttd_auth_http.git
+[submodule "plugins/EmqttdAuthDynamoDB"]
+	path = plugins/EmqttdAuthDynamoDB
+	url = git@github.com:GobiInc/EmqttdAuthDynamoDB.git
+[submodule "plugins/EmqttdTranslate"]
+	path = plugins/EmqttdTranslate
+	url = git@github.com:GobiInc/EmqttdTranslate.git
