case change for plugins

--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "plugins/EmqttdTranslate"]
 	path = plugins/emqttd_translate
 	url = git@github.com:GobiInc/EmqttdTranslate.git
+[submodule "plugins/emqttd_auth_dynamodb"]
+	path = plugins/emqttd_auth_dynamodb
+	url = git@github.com:GobiInc/EmqttdAuthDynamoDB.git
+[submodule "plugins/emqttd_translate"]
+	path = plugins/emqttd_translate
+	url = git@github.com:GobiInc/EmqttdTranslate.git
