--- a/rebar.config
+++ b/rebar.config
@@ -42,7 +42,8 @@
 	{gproc, ".*", {git, "git://github.com/uwiger/gproc.git", {branch, "master"}}},
 	{lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
 	{esockd, ".*", {git, "git://github.com/emqtt/esockd.git", {tag, "4.0"}}},
-	{mochiweb, "4.*", {git, "git://github.com/emqtt/mochiweb.git", {tag, "4.1"}}}
+	{mochiweb, "4.*", {git, "git://github.com/emqtt/mochiweb.git", {tag, "4.1"}}},
+	{current, ".*", {git, "git://github.com/GameAnalytics/current.git", {branch, "master"}}}
 ]}.
 
 {recursive_cmds, [ct, eunit, clean]}.
