raven and statse dependencies added to build

--- a/rebar.config
+++ b/rebar.config
@@ -43,7 +43,11 @@
 	{lager, ".*", {git, "git://github.com/basho/lager.git", {branch, "master"}}},
 	{esockd, ".*", {git, "git://github.com/emqtt/esockd.git", {tag, "4.0"}}},
 	{mochiweb, "4.*", {git, "git://github.com/emqtt/mochiweb.git", {tag, "4.1"}}},
-	{current, ".*", {git, "git://github.com/GameAnalytics/current.git", {branch, "master"}}}
+	{current, ".*", {git, "git://github.com/GameAnalytics/current.git", {branch, "master"}}},
+	{raven, ".*", {git, "git://github.com/asabil/raven-erlang.git", {branch, "master"}}},
+	{statse, ".*", {git, "git://github.com/howleysv/statse.git", {branch, "master"}}},
+	{jsone, ".*", {git, "git://github.com/sile/jsone.git", {branch, "master"}}},
+	{uuid, ".*", {git, "git://github.com/avtobiff/erlang-uuid", {branch, "master"}}}
 ]}.
 
 {recursive_cmds, [ct, eunit, clean]}.
