--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -26,6 +26,8 @@
          gproc,
          esockd,
          mochiweb,
+         raven,
+         statse,
          emqttd
         ]},
        {rel, "start_clean", "",
